force-app/main/default/objects/Export_Information__c/Export_Information__c.object-meta.xml
<CustomObject>
    <description>輸出情報1</description>
    <label>輸出先</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>輸出先</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>