force-app/main/default/objects/Export_Information__c/fields/Accident_Mobility__c.field-meta.xml
<CustomField>
    <fullName>Accident_Mobility__c</fullName>
    <label>自走</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>少し可</fullName>
            </value>
            <value>
                <fullName>不可・転がる</fullName>
            </value>
            <value>
                <fullName>不可・転がらない</fullName>
            </value>
            <value>
                <fullName>少し可・積載車積込OK</fullName>
            </value>
            <value>
                <fullName>少し可・積載車積込NG</fullName>
            </value>
            <value>
                <fullName>自走少し可・積載車積込OK・船積不動扱い</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>