force-app/main/default/objects/Export_Information__c/fields/Back_order__c.field-meta.xml
<CustomField>
    <fullName>Back_order__c</fullName>
    <label>バックオーダー</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>なし</fullName>
            </value>
            <value>
                <fullName>全台</fullName>
            </value>
            <value>
                <fullName>一部</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>