force-app/main/default/objects/Export_Information__c/fields/Basic_Info_Notes__c.field-meta.xml
<CustomField>
    <fullName>Basic_Info_Notes__c</fullName>
    <label>備考（車両基本情報）</label>
    <type>TextArea</type>
</CustomField>