force-app/main/default/objects/Export_Information__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>国</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>輸出先</relationshipLabel>
    <relationshipName>Country_export1</relationshipName>
    <type>Lookup</type>
</CustomField>