force-app/main/default/objects/Export_Information__c/fields/Cut_Types__c.field-meta.xml
<CustomField>
    <fullName>Cut_Types__c</fullName>
    <label>カットの種別</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Half Cut</fullName>
            </value>
            <value>
                <fullName>Nose Cut</fullName>
            </value>
            <value>
                <fullName>Roof Cut</fullName>
            </value>
            <value>
                <fullName>Tail Cut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>