force-app/main/default/objects/Export_Information__c/fields/Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>Drive_Type__c</fullName>
    <label>駆動</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>2WD</fullName>
            </value>
            <value>
                <fullName>4WD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>