force-app/main/default/objects/Export_Information__c/fields/HUB__c.field-meta.xml
<CustomField>
    <fullName>HUB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>この会社の主要輸出先としてカウントする場合はチェックを入れてください。</inlineHelpText>
    <label>集計値チェック</label>
    <type>Checkbox</type>
</CustomField>