force-app/main/default/objects/Export_Information__c/fields/Makers__c.field-meta.xml
<CustomField>
    <fullName>Makers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカ</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mst_Makers__c.disp_flg__c</field>
            <operation>equals</operation>
            <value>表示する</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Makers__c</referenceTo>
    <relationshipLabel>輸出先</relationshipLabel>
    <relationshipName>Makes</relationshipName>
    <type>Lookup</type>
</CustomField>