force-app/main/default/objects/Export_Information__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>輸出先</relationshipLabel>
    <relationshipName>member_auction_Export_Information1</relationshipName>
    <type>Lookup</type>
</CustomField>