force-app/main/default/objects/Export_Information__c/fields/Mileage_Records_Min__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Records_Min__c</fullName>
    <label>走行距離（以上）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>10,000km以上</fullName>
            </value>
            <value>
                <fullName>20,000km以上</fullName>
            </value>
            <value>
                <fullName>30,000km以上</fullName>
            </value>
            <value>
                <fullName>40,000km以上</fullName>
            </value>
            <value>
                <fullName>50,000km以上</fullName>
            </value>
            <value>
                <fullName>60,000km以上</fullName>
            </value>
            <value>
                <fullName>70,000km以上</fullName>
            </value>
            <value>
                <fullName>80,000km以上</fullName>
            </value>
            <value>
                <fullName>90,000km以上</fullName>
            </value>
            <value>
                <fullName>100,000km以上</fullName>
            </value>
            <value>
                <fullName>150,000km以上</fullName>
            </value>
            <value>
                <fullName>500,000km以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>