force-app/main/default/objects/Export_Information__c/fields/Port1__c.field-meta.xml
<CustomField>
    <fullName>Port1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>向け地1</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>輸出先 (向け地1)</relationshipLabel>
    <relationshipName>Port1_export1</relationshipName>
    <type>Lookup</type>
</CustomField>