force-app/main/default/objects/Export_Information__c/fields/Port2__c.field-meta.xml
<CustomField>
    <fullName>Port2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>向け地2</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>輸出先 (向け地2)</relationshipLabel>
    <relationshipName>Port2_export1</relationshipName>
    <type>Lookup</type>
</CustomField>