force-app/main/default/objects/Export_Information__c/fields/Preferred_vehicle_details__c.field-meta.xml
<CustomField>
    <fullName>Preferred_vehicle_details__c</fullName>
    <description>型式が入力されてたらメーカ・車種・型式を入力
車種が入力されてたらメーカ・車種
メーカが入力されてたらメーカのみ

メーカ・車種・型式の紐づきはなし
    →入力時、違うものが入力されてたら入力規則エラー</description>
    <label>希望車種詳細</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>