force-app/main/default/objects/Export_Information__c/fields/Preferred_vehicle_details_en__c.field-meta.xml
<CustomField>
    <fullName>Preferred_vehicle_details_en__c</fullName>
    <label>Preferred_vehicle_details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>