force-app/main/default/objects/Export_Information__c/fields/Stock_Locations__c.field-meta.xml
<CustomField>
    <fullName>Stock_Locations__c</fullName>
    <label>車両ストック</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>