force-app/main/default/objects/Export_Information__c/fields/Truck_Body_Types__c.field-meta.xml
<CustomField>
    <fullName>Truck_Body_Types__c</fullName>
    <label>車両形状（トラック）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>希望なし</fullName>
            </value>
            <value>
                <fullName>平ボディ</fullName>
            </value>
            <value>
                <fullName>ダンプ</fullName>
            </value>
            <value>
                <fullName>クレーン</fullName>
            </value>
            <value>
                <fullName>セルフ・重機運搬車</fullName>
            </value>
            <value>
                <fullName>ミキサー車</fullName>
            </value>
            <value>
                <fullName>高所作業車</fullName>
            </value>
            <value>
                <fullName>トレーラヘッド</fullName>
            </value>
            <value>
                <fullName>アルミウィング</fullName>
            </value>
            <value>
                <fullName>アルミバン</fullName>
            </value>
            <value>
                <fullName>冷蔵冷凍車</fullName>
            </value>
            <value>
                <fullName>コンテナ専用車</fullName>
            </value>
            <value>
                <fullName>パッカー車</fullName>
            </value>
            <value>
                <fullName>バス</fullName>
            </value>
            <value>
                <fullName>重機</fullName>
            </value>
            <value>
                <fullName>特装車・その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>