force-app/main/default/objects/Export_Information__c/fields/Year1_note__c.field-meta.xml
<CustomField>
    <fullName>Year1_note__c</fullName>
    <label>年式　備考</label>
    <type>TextArea</type>
</CustomField>