force-app/main/default/objects/Export_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Month_Purchases1__c</columns>
    <columns>Export_Methods__c</columns>
    <columns>Cut_Types__c</columns>
    <columns>Stock_Locations__c</columns>
    <columns>Model_Types__c</columns>
    <columns>Truck_Body_Types__c</columns>
    <columns>Heavy_Equipment_Types__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>